Adding vendor, version, and authors key to dockerfiles

--- a/analyzers/AbuseIPDB/Dockerfile
+++ b/analyzers/AbuseIPDB/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="AbuseIPDB" \
+LABEL author="Matteo Lodi" \
       description="Determine whether an IP was reported or not as malicious by AbuseIPDB" \
-      author="Matteo Lodi"
+      license="AGPL-v3" \
+      title="AbuseIPDB" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
