--- a/analyzers/Abuse_Finder/Dockerfile
+++ b/analyzers/Abuse_Finder/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Abuse_Finder" \
+LABEL author="CERT-BDF" \
       description="Find abuse contacts associated with domain names, URLs, IPs and email addresses." \
-      author="CERT-BDF"
+      license="AGPL-V3" \
+      title="Abuse_Finder" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="3.0.0"
 
 WORKDIR /worker
 
