--- a/analyzers/Fortiguard/Dockerfile
+++ b/analyzers/Fortiguard/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Fortiguard" \
+LABEL author="Eric Capuano" \
       description="Check the Fortiguard category of a URL, FQDN or a domain. Check the full available list at https://fortiguard.com/webfilter/categories" \
-      author="Eric Capuano"
+      license="AGPL-V3" \
+      title="Fortiguard" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="2.1.0"
 
 WORKDIR /worker
 
