--- a/analyzers/IBMXForce/Dockerfile
+++ b/analyzers/IBMXForce/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="IBMXForce" \
+LABEL author="Davide Arcuri and Andrea Garavaglia, LDO-CERT" \
       description="Query domains, IPs, hashes and URLs against IBM X-Force threat intelligence sharing platform." \
-      author="Davide Arcuri and Andrea Garavaglia, LDO-CERT"
+      license="AGPL-V3" \
+      title="IBMXForce" \
+      url="https://github.com/LDO-CERT/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
