--- a/analyzers/Malpedia/Dockerfile
+++ b/analyzers/Malpedia/Dockerfile
@@ -7,9 +7,13 @@ FROM python:3-alpine
 
 RUN apk add --no-cache gcc musl-dev
 
-LABEL name="Malpedia" \
+LABEL author="Davide Arcuri and Andrea Garavaglia, LDO-CERT" \
       description="Check files against Malpedia YARA rules." \
-      author="Davide Arcuri and Andrea Garavaglia, LDO-CERT"
+      license="AGPL-V3" \
+      title="Malpedia" \
+      url="https://github.com/LDO-CERT/cortex-analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
