--- a/analyzers/Nessus/Dockerfile
+++ b/analyzers/Nessus/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Nessus" \
+LABEL author="Guillaume Rousse" \
       description="Use Nessus Professional to scan hosts." \
-      author="Guillaume Rousse"
+      license="AGPL-V3" \
+      title="Nessus" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="2.0.0"
 
 WORKDIR /worker
 
