--- a/analyzers/OTXQuery/Dockerfile
+++ b/analyzers/OTXQuery/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="OTXQuery" \
+LABEL author="Eric Capuano" \
       description="Query AlienVault OTX for IPs, domains, URLs, or file hashes." \
-      author="Eric Capuano"
+      license="AGPL-V3" \
+      title="OTXQuery" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="2.0.0"
 
 WORKDIR /worker
 
