--- a/analyzers/Onyphe/Dockerfile
+++ b/analyzers/Onyphe/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Onyphe" \
+LABEL authors="Pierre Baudry, Adrien Barchapt, ANSSI" \
       description="Retrieve reverse DNS lookup information Onyphe has for the given IPv{4,6} address with history of changes." \
-      author="Pierre Baudry, Adrien Barchapt"
+      license="AGPL-V3" \
+      title="Onyphe" \
+      url="https://github.com/cybernardo/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
