--- a/analyzers/Pulsedive/Dockerfile
+++ b/analyzers/Pulsedive/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Pulsedive" \
+LABEL author="Nils Kuhnert" \
       description="Search Pulsedive.com for a giver domain name, hash, ip or url" \
-      author="Nils Kuhnert"
+      license="AGPL-V3" \
+      title="Pulsedive" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
