--- a/analyzers/WOT/Dockerfile
+++ b/analyzers/WOT/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="WOT" \
+LABEL author="Andrea Garavaglia, LDO-CERT" \
       description="Use Web of Trust to check a domain's reputation." \
-      author="Andrea Garavaglia, LDO-CERT"
+      license="AGPL-V3" \
+      title="WOT" \
+      url="https://github.com/garanews/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="1.0.0"
 
 WORKDIR /worker
 
