--- a/analyzers/MISP/Dockerfile
+++ b/analyzers/MISP/Dockerfile
@@ -5,9 +5,13 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="MISP" \
+LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Query multiple MISP instances for events containing an observable." \
-      author="Nils Kuhnert, CERT-Bund"
+      license="AGPL-V3" \
+      title="MISP" \
+      url="https://github.com/BSI-CERT-Bund/cortex-analyzers" \
+      vendor="TheHive" \
+      version="2.1.0"
 
 WORKDIR /worker
 
