--- a/analyzers/PhishingInitiative/Dockerfile
+++ b/analyzers/PhishingInitiative/Dockerfile
@@ -5,8 +5,7 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL authors="Remi Pointel, CERT-BDF" \
-      description="Use Phishing Initiative to check if a URL is a verified phishing site." \
+LABEL authors="CERT-BDF, Remi Pointel" \
       license="AGPL-V3" \
       title="PhishingInitiative" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
